--- a/package.json
+++ b/package.json
@@ -72,13 +72,13 @@
         "motion": "^12.23.24",
         "motion-dom": "^12.23.23",
         "nanoid": "^5.1.6",
-        "next": "15.3.5",
+        "next": "^16.1.6",
         "next-themes": "^0.4.6",
         "qrcode": "^1.5.4",
         "qss": "^3.0.0",
-        "react": "^19.0.0",
+        "react": "^19.2.4",
         "react-day-picker": "^9.8.0",
-        "react-dom": "^19.0.0",
+        "react-dom": "^19.2.4",
         "react-dropzone": "^14.3.8",
         "react-fast-marquee": "^1.6.5",
         "react-hook-form": "^7.60.0",
